One to One Call Implemented

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,11 +14,11 @@
     <ion-list>
 
       <ion-item>
-        <ion-label floating>Email</ion-label>
-        <ion-input type="email" [(ngModel)]="loginForm.email"></ion-input>
+        <ion-label floating>Phone Number</ion-label>
+        <ion-input type="email" [(ngModel)]="loginForm.phone"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label floating>Display Name</ion-label>
+        <ion-label floating>Name</ion-label>
         <ion-input type="text" [(ngModel)]="loginForm.name"></ion-input>
       </ion-item>
 
